# dbus_win

./: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  NEWS  README  README.cmake  configure.ac  meson.build  meson_options.txt  meson_post_install.py  meson_post_install_systemd.py
LICENSES/: FSFULLR.txt
bus/: CMakeLists.txt  Makefile.am  bus.c  bus.h  config-parser-trivial.c  config-parser.c  connection.c  containers.c  dir-watch-inotify.c  dir-watch-kqueue.c  dispatch.c  driver.c  main.c  meson.build  selinux.c  services.c  signals.c  test.h
bus/legacy-config/: meson.build
bus/systemd-user/: meson.build
bus/sysusers.d/: meson.build
bus/tmpfiles.d/: meson.build
cmake/: ConfigureChecks.cmake  config.h.cmake  meson.build
cmake/modules/: FindGLIB2.cmake  Macros.cmake  Win32Macros.cmake
dbus/: CMakeLists.txt  Makefile.am  dbus-arch-deps.h.in  dbus-connection-internal.h  dbus-connection.c  dbus-connection.h  dbus-file-unix.c  dbus-hash.h  dbus-internals.c  dbus-internals.h  dbus-macros-internal.h  dbus-macros.h  dbus-mainloop.c  dbus-marshal-basic.c  dbus-marshal-byteswap.c  dbus-marshal-recursive.c  dbus-marshal-recursive.h  dbus-marshal-validate.c  dbus-memory.c  dbus-mempool.c  dbus-message.c  dbus-message.h  dbus-nonce.c  dbus-pipe.h  dbus-resources.c  dbus-resources.h  dbus-server-debug-pipe.c  dbus-server-protected.h  dbus-server-socket.c  dbus-server-socket.h  dbus-server-unix.c  dbus-server.c  dbus-spawn-unix.c  dbus-spawn-win.c  dbus-string.c  dbus-string.h  dbus-sysdeps-thread-win.c  dbus-sysdeps-unix.c  dbus-sysdeps-unix.h  dbus-sysdeps-util-unix.c  (+16 more)
doc/: CMakeLists.txt  Makefile.am  dbus-daemon.1.xml.in  dbus-run-session.1.xml.in  dbus-specification.xml  dbus-test-tool.1.xml.in  dbus-update-activation-environment.1.xml.in  maintainer-upload-docs.sh  meson.build  meson_post_install.py
maint/: i686-w64-mingw32.txt  release-checklist.md  update-authors.sh  x86_64-w64-mingw32.txt
ms_build/: .gitignore  ms_build.sln
ms_build/config/: config.h  global_type_define.h
ms_build/config/dbus/: dbus-arch-deps.h
ms_build/dbus-1/: dbus-1.vcxproj  dbus-1.vcxproj.filters
ms_build/dbus-daemon/: dbus-daemon.vcxproj  dbus-daemon.vcxproj.filters  session.xml  system.conf
ms_build/dbus-internal/: dbus-internal.vcxproj  dbus-internal.vcxproj.filters
ms_build/dbus-launch/: dbus-launch.vcxproj  dbus-launch.vcxproj.filters
ms_build/dbus-monitor/: dbus-monitor.vcxproj  dbus-monitor.vcxproj.filters
ms_build/dbus-send/: dbus-send.vcxproj  dbus-send.vcxproj.filters
ms_build/dbus-testutils/: dbus-testutils.vcxproj  dbus-testutils.vcxproj.filters
ms_build/expat_binary/: libexpat.exp  libexpat.ilk  libexpat.lib  libexpatMT.lib
ms_build/test-names/: test-names.vcxproj  test-names.vcxproj.filters
ms_build/test-privserver/: test-privserver.vcxproj  test-privserver.vcxproj.filters
ms_build/test-service/: test-service.vcxproj  test-service.vcxproj.filters
ms_build/test-shell-service/: test-shell-service.vcxproj  test-shell-service.vcxproj.filters
test/: CMakeLists.txt  Makefile.am  containers.c  corrupt.c  dbus-daemon.c  fdpass.c  loopback.c  meson.build  message.c  monitor.c  relay.c  test-platform-mutex.c  test-privserver.c  test-utils-glib.c  test-utils-glib.h  test-utils.c
test/bus/: common.c  dispatch-sha1.c  dispatch.c  failed-helper-activation.c  helper-activation.c  normal-activation.c
test/data/: copy_data_for_tests.py  meson.build
test/internals/: dbus-auth-script.c  dbus-auth-util.c  dbus-marshal-recursive-util.c  dbus-message-util.c  dbus-string-util.c  misc-internals.c  server-oom.c  sha.c  sysdeps.c
test/name-test/: CMakeLists.txt  Makefile.am  meson.build  test-autolaunch-win.c  test-pending-call-dispatch.c
test/use-as-subproject/: meson.build
tools/: CMakeLists.txt  Makefile.am  build-timestamp.py  ci-build.sh  ci-install.sh  cmake-format  dbus-launch-x11.c  dbus-launch.c  dbus-monitor.c  dbus-print-message.c  dbus-run-session.c  dbus-send.c  meson.build
tools/docker/windows/: Dockerfile
